maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:5: error: forward reference extends over definition of variable turn
      turn+=1
      ^